// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author/Date renders a single author 1`] = `
.c0 {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c0.date {
  white-space: nowrap;
}

.c0:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin: 6px 10px 0 0;
  background-color: #000;
}

@media (max-width: 720px) {
  .c0 {
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width: 720px) {
  .c0:before {
    min-width: 8px;
    min-height: 8px;
  }
}

<div
  className="author c0"
>
  By 
  Molly Gottschalk
</div>
`;

exports[`Author/Date renders multiple authors 1`] = `
.c0 {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c0.date {
  white-space: nowrap;
}

.c0:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin: 6px 10px 0 0;
  background-color: #000;
}

@media (max-width: 720px) {
  .c0 {
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width: 720px) {
  .c0:before {
    min-width: 8px;
    min-height: 8px;
  }
}

<div
  className="author c0"
>
  By 
  Molly Gottschalk and Kana Abe
</div>
`;

exports[`Author/Date renders the date 1`] = `
.c0 {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c0.date {
  white-space: nowrap;
}

@media (max-width: 720px) {
  .c0 {
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium ,      'Arial',      'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

<div
  className="date c0"
>
  May 19, 2017 9:09 am
</div>
`;
